--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,11 @@ buildscript {
         mavenLocal()
         maven { url "https://repo.grails.org/grails/core" }
     }
-    dependencies {        
+    configurations {
+        compile.exclude module: "spring-boot-starter-tomcat"
+    }
+    dependencies {
+        compile("org.springframework.boot:spring-boot-starter-undertow")
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath 'com.bertramlabs.plugins:asset-pipeline-gradle:2.5.0'
         classpath "org.grails.plugins:hibernate:4.3.10.5"
