--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,10 @@ buildscript {
         maven { url "https://repo.grails.org/grails/core" }
     }
     configurations {
-        compile.exclude module: "spring-boot-starter-tomcat"
+        compile.exclude module: "spring-boot-starter-tomcat" //
     }
     dependencies {
-        compile("org.springframework.boot:spring-boot-starter-undertow")
+        compile("org.springframework.boot:spring-boot-starter-undertow") //
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath 'com.bertramlabs.plugins:asset-pipeline-gradle:2.5.0'
         classpath "org.grails.plugins:hibernate:4.3.10.5"
