--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ buildscript {
         compile.exclude module: "spring-boot-starter-tomcat" //
     }
     dependencies {
-        compile("org.springframework.boot:spring-boot-starter-undertow") //
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath 'com.bertramlabs.plugins:asset-pipeline-gradle:2.5.0'
         classpath "org.grails.plugins:hibernate:4.3.10.5"
@@ -58,7 +57,8 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-autoconfigure"
-    compile "org.springframework.boot:spring-boot-starter-tomcat"
+//    compile "org.springframework.boot:spring-boot-starter-tomcat"
+    compile("org.springframework.boot:spring-boot-starter-undertow") //
     compile "org.grails:grails-dependencies"
     compile "org.grails:grails-web-boot"
 
