--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,10 @@ dependencies {
     testRuntime 'org.seleniumhq.selenium:selenium-htmlunit-driver:2.44.0'
 
     console "org.grails:grails-console"
+
+    runtime ('org.postgresql:postgresql:9.4-1200-jdbc41') {
+        exclude group: 'org.slf4j', module: 'slf4j-api'
+    }
 }
 
 task wrapper(type: Wrapper) {
